<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/draw" />

        <RadioButton
            android:id="@+id/move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/rg1"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle" />

        <RadioButton
            android:id="@+id/triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangle" />

        <RadioButton
            android:id="@+id/rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rect" />
    </RadioGroup>

    <Spinner
        android:id="@+id/colours"
        android:layout_width="274dp"
        android:layout_height="47dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:entries="@array/colours"
        app:layout_constraintStart_toEndOf="@+id/rg2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/undo"
        android:layout_width="81dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/undo"
        app:layout_constraintStart_toEndOf="@+id/colours"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.myapplication.MyView
        android:id="@+id/panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colours" />

</androidx.constraintlayout.widget.ConstraintLayout>